Margins and spacing fixes

--- a/app/theme/flow.scss
+++ b/app/theme/flow.scss
@@ -156,25 +156,6 @@
     }
   }
 
-  .graphWrapper {
-    width:calc(100%-196px);
-  }
-
-  h2 {
-    &.socketRoom {
-      background-color: #565656;
-      display: block;
-      height: 50px;
-      margin-top: 0px;
-      color: #fff;
-      padding: 10px 0 10px 20px;
-      line-height: 50px;
-      font-size: 1.2em;
-      width: calc(100% - 16px);
-      z-index:2;
-    }
-  }
-
   textarea {
     width: calc(100% - 28px);
     min-height: 100px;
